--- a/_columns/The_Big_Picture/zh-cn/2024-11-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-12.md
@@ -10,46 +10,37 @@ author: KEN SHREVE
 
 
 
-Small caps lagged in the stock market Tuesday, but selling was well contained in the Nasdaq composite and S&P 500 ahead of a key inflation report Wednesday.  
-周二小盘股在股市中落后，但在周三发布关键通胀报告之前，纳斯达克综合指数和标准普尔 500 指数的抛售得到了很好的控制。
+Small caps lagged in the stock market Tuesday, but selling was well contained in the Nasdaq composite and S&P 500 ahead of a key inflation report Wednesday.  
 
 
-The Russell 2000 slumped 1.8%, but the decline didn't look too bad in light of an 8.6% gain for the small-cap index last week. Despite the loss, the Russell is still well clear of short-term support levels like the 10-day and 21-day exponential moving averages.  
-罗素 2000 指数下跌 1.8%，但鉴于上周小盘股指数上涨 8.6%，跌幅看起来并不算太糟糕。尽管损失惨重，但罗素指数仍远未触及 10 天和 21 天指数移动平均线等短期支撑位。
+The Russell 2000 slumped 1.8%, but the decline didn't look too bad in light of an 8.6% gain for the small-cap index last week. Despite the loss, the Russell is still well clear of short-term support levels like the 10-day and 21-day exponential moving averages.  
 
 
 
 
-Rising bond yields were partly responsible for the selling in the Russell 2000. The 10-year Treasury yield soared 12 basis points to 4.43%.  
-不断上升的债券收益率是罗素 2000 指数抛售的部分原因。10 年期美国国债收益率飙升 12 个基点至 4.43%。
+Rising bond yields were partly responsible for the selling in the Russell 2000. The 10-year Treasury yield soared 12 basis points to 4.43%.  
 
 
-Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are less confident than they were about another quarter-point rate cut at the next Federal Reserve meeting in December. A month ago, those chances were 84%. Late Tuesday, they were 62%. There's a growing school of thought that the Fed won't have to cut rates as aggressively as first thought amid a stream of mostly positive economic data in recent weeks.  
-[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的期货交易员对美联储在 12 月的下一次会议上再次降息 25 个基点的信心不如他们。一个月前，这个机会是 84%。周二晚些时候，这一比例为 62%。越来越多的观点认为，在最近几周一系列大部分积极的经济数据中，美联储不必像最初想象的那样激进降息。
+Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are less confident than they were about another quarter-point rate cut at the next Federal Reserve meeting in December. A month ago, those chances were 84%. Late Tuesday, they were 62%. There's a growing school of thought that the Fed won't have to cut rates as aggressively as first thought amid a stream of mostly positive economic data in recent weeks.  
 
 
-The consumer price index is due Wednesday at 8:30 a.m. ET. On a year-over-basis, headline prices are expected to have risen 2.6% in October, up slightly from 2.4% in September. Core prices, which exclude food and energy costs, are seen rising 3.3%, unchanged from September.  
-消费者价格指数将于美国东部时间周三上午 8：30 公布。与去年同期相比，预计 10 月份整体价格将上涨 2.6%，略高于 9 月份的 2.4%。剔除食品和能源成本的核心价格预计上涨 3.3%，与 9 月份持平。
+The consumer price index is due Wednesday at 8:30 a.m. ET. On a year-over-basis, headline prices are expected to have risen 2.6% in October, up slightly from 2.4% in September. Core prices, which exclude food and energy costs, are seen rising 3.3%, unchanged from September.  
 
 
-Separately, the latest reading on wholesales prices will be out Thursday, along with a speech from Fed Chair Jerome Powell at 3 p.m. ET.  
-另外，批发价格的最新数据将于美国东部时间周四公布，美联储主席杰罗姆鲍威尔也将发表讲话。
+Separately, the latest reading on wholesales prices will be out Thursday, along with a speech from Fed Chair Jerome Powell at 3 p.m. ET.  
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The Dow Jones Industrial Average also lagged with a loss of 0.9% and closed below the 44,000 level. The S&P 500 eased 0.3% as it wages a battle near the 6000 level. The Nasdaq composite dipped 0.1% and continues to show strength by trading tightly near highs.  
-道琼斯工业平均指数也下跌 0.9%，收于 44,000 点以下。标准普尔 500 指数下跌 0.3%，因为它在 6000 水平附近展开了一场战斗。纳斯达克综合指数下跌 0.1%，并在高点附近紧随其后，继续显示出强劲势头。
+The Dow Jones Industrial Average also lagged with a loss of 0.9% and closed below the 44,000 level. The S&P 500 eased 0.3% as it wages a battle near the 6000 level. The Nasdaq composite dipped 0.1% and continues to show strength by trading tightly near highs.  
 
 
-Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq by just over 2-to-1. Breadth was worse on the NYSE at nearly 4-to-1 negative.  
-两个主要交易所的成交量都较低。下跌的股票以略高于 2 比 1 的比分击败了纳斯达克的上涨股票。纽约证券交易所的广度更差，接近 4 比 1。
+Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq by just over 2-to-1. Breadth was worse on the NYSE at nearly 4-to-1 negative.  
 
 
-On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
-在市值加权标准普尔 500 指数下跌 0.3% 的一天，景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 以下跌 0.8% 确认了疲软的广度。[MarketSurge.com](https://marketsurge.investors.com) 的主页显示，166 只股票大幅上涨，而 756 只股票成交量强劲。
+On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
 
 
 
@@ -57,8 +48,7 @@ On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500
 ---
 
 
-**[Stay In Sync With The Market With IBD's ETF Strategy  
-通过 IBD 的 ETF 策略与市场保持同步](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Stay In Sync With The Market With IBD's ETF Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)** 
 
 
 
@@ -66,76 +56,61 @@ On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500
 ---
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP111224-218x300.jpg)The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) extended losses after Monday's sharp drop. Chip stocks lagged Monday after the Biden administration asked **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) to stop shipping advanced AI chips to China customers.  
-VanEck Semiconductor ETF （[SMH）](https://research.investors.com/quote.aspx?symbol=SMH) 在周一大幅下跌后扩大了跌幅。在拜登政府要求**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)） 停止向中国客户运送先进的人工智能芯片后，芯片股周一下跌。
+![](https://www.investors.com/wp-content/uploads/2024/11/MP111224-218x300.jpg)The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) extended losses after Monday's sharp drop. Chip stocks lagged Monday after the Biden administration asked **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) to stop shipping advanced AI chips to China customers.  
 
 
-To be sure, the number of stocks that have gapped up after earnings and are holdings gains post-breakout is impressive.  
-可以肯定的是，财报后跳空上涨并在突破后持有上涨的股票数量令人印象深刻。
+To be sure, the number of stocks that have gapped up after earnings and are holdings gains post-breakout is impressive.  
 
 
-**Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)), **Garmin** ([GRMN](https://research.investors.com/quote.aspx?symbol=GRMN)), **Toast** ([TOST](https://research.investors.com/quote.aspx?symbol=TOST)) and **Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) are recent examples. There are plenty more, too. While strong gainers like these should be watched for alternate entries, they're also good examples of how extended stocks have become in short order. Extended stocks seem to be the rule, not the exception at this point.  
-**Twilio** （[TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)）、**Garmin** （[GRMN](https://research.investors.com/quote.aspx?symbol=GRMN)）、**Toast** （[TOST](https://research.investors.com/quote.aspx?symbol=TOST)） 和 **Fortinet** （[FTNT）](https://research.investors.com/quote.aspx?symbol=FTNT) 是最近的例子。还有更多。虽然应该关注像这样的强劲上涨股票是否有其他入场点，但它们也是短时间内扩大股票的好例子。在这一点上，扩大库存似乎是规则，而不是例外。
+**Twilio** ([TWLO](https://research.investors.com/quote.aspx?symbol=TWLO)), **Garmin** ([GRMN](https://research.investors.com/quote.aspx?symbol=GRMN)), **Toast** ([TOST](https://research.investors.com/quote.aspx?symbol=TOST)) and **Fortinet** ([FTNT](https://research.investors.com/quote.aspx?symbol=FTNT)) are recent examples. There are plenty more, too. While strong gainers like these should be watched for alternate entries, they're also good examples of how extended stocks have become in short order. Extended stocks seem to be the rule, not the exception at this point.  
 
 
-Stocks To Watch 值得关注的股票
------------------------
+Stocks To Watch
+---------------
 
 
-While it may seem natural to look for stocks building [bases](https://www.investors.com/ibd-university/how-to-buy/bases-overview-1/), keep in mind that the big stock market leaders started coming out weeks ago. Most stocks building bases now have lagging [relative strength lines](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/). **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) offers a good example as well as **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), a maker of aircraft components tracked in the aerospace and defense group.  
-虽然寻找建立[基础](https://www.investors.com/ibd-university/how-to-buy/bases-overview-1/)的股票似乎很自然，但请记住，大型股市领导者几周前就开始出现。大多数建立基础的股票现在都有滞后的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)。**Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)） 就是一个很好的例子，**Heico** （HEI） 也是一个很好的例子，[Heico （HEI](https://research.investors.com/quote.aspx?symbol=HEI)） 是一家在航空航天和国防集团跟踪的飞机部件制造商。
+While it may seem natural to look for stocks building [bases](https://www.investors.com/ibd-university/how-to-buy/bases-overview-1/), keep in mind that the big stock market leaders started coming out weeks ago. Most stocks building bases now have lagging [relative strength lines](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/). **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) offers a good example as well as **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), a maker of aircraft components tracked in the aerospace and defense group.  
 
 
 
-Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) rose 0.7% in light volume and closed just below a 182.02 entry. Its relative strength line is also far off highs. **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) relative strength line looks closer to highs as it holds in a buy zone from a 201.20 entry.  
-谷歌母公司 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 的成交量上涨 0.7%，收盘价略低于 182.02。它的相对强弱线也远未达到高点。**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 的相对强弱线看起来更接近高点，因为它从 201.20 入场点开始保持在买入区域。
+Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) rose 0.7% in light volume and closed just below a 182.02 entry. Its relative strength line is also far off highs. **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) relative strength line looks closer to highs as it holds in a buy zone from a 201.20 entry.  
 
 
-China stocks generally underperformed, with the Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) down 4.5%. But one name in China is still showing strength and support. Hotel operator **Atour Lifestyle** ([ATAT](https://research.investors.com/quote.aspx?symbol=ATAT)), an [IBD Sector Leader](https://research.investors.com/stock-lists/sector-leaders), is digesting recent gains well as it trades tightly just above its 10-week moving average. Shares rose 1.6%, with the company's earnings report due next week.  
-中国股市普遍表现不佳，Krane CSI 中国互联网 ETF （[KWEB）](https://research.investors.com/quote.aspx?symbol=KWEB) 下跌 4.5%。但中国的一个名字仍然显示出实力和支持。酒店运营商 **Atour Lifestyle** （[ATAT](https://research.investors.com/quote.aspx?symbol=ATAT)） 是 [IBD 行业的领导者](https://research.investors.com/stock-lists/sector-leaders)，正在很好地消化最近的涨幅，其交易价格紧随其 10 周移动平均线上方。股价上涨 1.6%，该公司的收益报告将于下周公布。
+China stocks generally underperformed, with the Krane CSI China Internet ETF ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) down 4.5%. But one name in China is still showing strength and support. Hotel operator **Atour Lifestyle** ([ATAT](https://research.investors.com/quote.aspx?symbol=ATAT)), an [IBD Sector Leader](https://research.investors.com/stock-lists/sector-leaders), is digesting recent gains well as it trades tightly just above its 10-week moving average. Shares rose 1.6%, with the company's earnings report due next week.  
 
 
-Patience For Now 暂时的耐心
-----------------------
+Patience For Now
+----------------
 
 
-Patience is a virtue for now. In the meantime, keep close tabs on your winners. If they're pulling back in light volume and finding support at key levels, there's nothing to do. But if volume starts to pick up to the downside, treat your winners with care and don't be afraid to take partial or even full profits.  
-耐心目前是一种美德。同时，密切关注您的获胜者。如果他们在低音量下撤并在关键水平上寻找支撑，那就无能为力。但是，如果交易量开始回升至下行，请小心对待您的赢家，不要害怕获得部分甚至全部利润。
+Patience is a virtue for now. In the meantime, keep close tabs on your winners. If they're pulling back in light volume and finding support at key levels, there's nothing to do. But if volume starts to pick up to the downside, treat your winners with care and don't be afraid to take partial or even full profits.  
 
 
-Stock market bulls wouldn't mind seeing an orderly, low-volume pullback from here. If it comes to fruition, it shouldn't take long for new buys to present themselves. For now, avoid chasing the big leaders that are well extended from proper entries. That's an easy way to lose money.  
-股市多头不介意看到从这里开始出现有序的低成交量回调。如果它取得成果，新购买的产品应该很快就会出现。现在，避免追逐那些从适当条目中延伸出来的大领导者。这是一种简单的赔钱方式。
+Stock market bulls wouldn't mind seeing an orderly, low-volume pullback from here. If it comes to fruition, it shouldn't take long for new buys to present themselves. For now, avoid chasing the big leaders that are well extended from proper entries. That's an easy way to lose money.  
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111224.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111224.pdf) 
 
 
-*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq) 
 
 
 
