--- a/_columns/The_Big_Picture/zh-cn/2024-11-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-14.md
@@ -20,20 +20,16 @@ Indexes closed near session lows. The Dow Jones Industrial Average declined 0.5
 
 
 
-Volume fell on the Nasdaq and on the New York Stock Exchange from Wednesday's session. That helped the Nasdaq and S&P 500 avoid a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and left both with minor totals of higher-volume losses.  
-从周三的交易时段开始，纳斯达克和纽约证券交易所的成交量有所下降。这帮助纳斯达克和标准普尔 500 指数避免了[派息日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，并使两者都出现了较小的高成交量损失。
+Volume fell on the Nasdaq and on the New York Stock Exchange from Wednesday's session. That helped the Nasdaq and S&P 500 avoid a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) and left both with minor totals of higher-volume losses.  
 
 
-Nine of the 11 S&P 500 sectors ended lower, with industrials and consumer discretionary leading the downside. The energy and technology sectors edged higher.  
-标准普尔 500 指数的 11 个板块中有 9 个板块收低，其中工业和非必需消费品领跌。能源和科技板块小幅走高。
+Nine of the 11 S&P 500 sectors ended lower, with industrials and consumer discretionary leading the downside. The energy and technology sectors edged higher.  
 
 
-On Thursday afternoon, Powell said that U.S. economic strength will allow the central bank to be patient on lowering interest rates.  
-周四下午，鲍威尔表示，美国经济实力将使央行对降息保持耐心。
+On Thursday afternoon, Powell said that U.S. economic strength will allow the central bank to be patient on lowering interest rates.  
 
 
-"The economy is not sending any signals that we need to be in a hurry to lower rates," Powell said. "The strength we are currently seeing in the economy gives us the ability to approach our decisions carefully."  
-鲍威尔说：“经济没有发出任何信号，表明我们需要急于降低利率。“我们目前在经济中看到的实力使我们能够谨慎地做出决策。”
+"The economy is not sending any signals that we need to be in a hurry to lower rates," Powell said. "The strength we are currently seeing in the economy gives us the ability to approach our decisions carefully."  
 
 
 Bond traders [scaled back the chances for a December rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html). Odds for a quarter-point reduction fell to 62.1% from 82.5% on Wednesday. Yet the 10-year Treasury yield fell two basis points to 4.42% in late-afternoon trading.  
@@ -44,8 +40,7 @@ Bond traders [scaled back the chances for a December rate cut](https://www.cmegr
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market  
-英伟达、苹果和特斯拉重点介绍如何处理这个股票市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/) 
 
 
 
@@ -53,24 +48,20 @@ Bond traders [scaled back the chances for a December rate cut](https://www.cmegr
 ---
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-In the Dow Jones index, **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the clear winner Thursday with its jump of 6.2%. Late Wednesday, Disney reported stronger-than-expected [fiscal Q4 earnings results](https://www.investors.com/news/disney-stock-q4-2024-earnings-dow-jones/).  
-在道琼斯指数中，**华特迪士尼** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)） 周四以 6.2% 的涨幅成为明显的赢家。周三晚些时候，迪士尼公布了强于预期的[第四财季财报结果](https://www.investors.com/news/disney-stock-q4-2024-earnings-dow-jones/)。
+In the Dow Jones index, **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) was the clear winner Thursday with its jump of 6.2%. Late Wednesday, Disney reported stronger-than-expected [fiscal Q4 earnings results](https://www.investors.com/news/disney-stock-q4-2024-earnings-dow-jones/).  
 
 
-On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) sold off 3% and 2.1%, respectively. Cisco [reported earnings](https://www.investors.com/news/technology/cisco-stock-cisco-earnings-news-q32024/). Salesforce remains above its recent 318.71 buy point.  
-不利的一面是，**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **Cisco Systems** （[CSCO）](https://research.investors.com/quote.aspx?symbol=CSCO) 分别下跌了 3% 和 2.1%。思科[公布了收益](https://www.investors.com/news/technology/cisco-stock-cisco-earnings-news-q32024/)。Salesforce 仍高于其最近的 318.71 买入点。
+On the downside, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) sold off 3% and 2.1%, respectively. Cisco [reported earnings](https://www.investors.com/news/technology/cisco-stock-cisco-earnings-news-q32024/). Salesforce remains above its recent 318.71 buy point.  
 
 
-Most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) dropped 1.3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) moved up 0.3% to [close near its record highs](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings-preview/). And Tesla skidded nearly 6%, erasing the entirety of this week's gains.  
-大多数 [Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收低，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 下跌 1.3%。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 上涨 0.3%，[收于历史高点附近](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings-preview/)。特斯拉下跌近 6%，抹去了本周的全部涨幅。
+Most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) dropped 1.3%. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) moved up 0.3% to [close near its record highs](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings-preview/). And Tesla skidded nearly 6%, erasing the entirety of this week's gains.  
 
 
-Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund tumbled 3.3%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big decliners on the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), which continued to fall after Wednesday's brief spike to new highs.  
-与此同时，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 3.3%。[在 IBD 50 中](https://research.investors.com/stock-lists/ibd-50/)，盘中有许多大跌幅，包括**卡瓦酒** （[CAVA），](https://research.investors.com/quote.aspx?symbol=CAVA)它在周三短暂飙升至新高后继续下跌。
+Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund tumbled 3.3%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big decliners on the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), which continued to fall after Wednesday's brief spike to new highs.  
 
 
 
@@ -140,27 +131,22 @@ Footwear leader On Holding held above a 52.80 buy point in a flat base Thursday.
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 
 
 
 
