--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-12.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-12.md
@@ -1,7 +1,19 @@
 ---
 layout: page
 title: >-
-  Warren Buffett Pick Heico Nears A Buy Point Amid 45% Rally	沃伦·巴菲特 （Warren Buffett） 选择海高 （Heico） 在 45% 的反弹中接近买入点
+  Warren Buffett Pick Heico Nears A Buy Point Amid 45% Rally	
+
+
+
+
+
+重试
+  
+        
+
+
+
+错误原因
 image: /assets/img/stock-of-the-day/2024-11-12.jpg
 date: 2024-11-12 12:29 -0800
 author: HARRISON MILLER
@@ -12,86 +24,68 @@ author: HARRISON MILLER
 
 
 
-**Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares of the jet engine and defense components supplier close in on a buy point. Investment guru Warren Buffett earlier this summer opened up a new position in Heico and loaded up on shares.  
-**Heico** （[HEI](https://research.investors.com/quote.aspx?symbol=HEI)） 是周二的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为这家喷气发动机和国防部件供应商的股价接近买入点。今年夏天早些时候，投资大师沃伦·巴菲特 （Warren Buffett） 在 Heico 开设了新头寸并增持了股票。
+**Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares of the jet engine and defense components supplier close in on a buy point. Investment guru Warren Buffett earlier this summer opened up a new position in Heico and loaded up on shares.  
 
 
 
 
-Hollywood, Fla.-based Heico produces parts, electronics and control and test systems for customers in the defense and aerospace industries. The company's products are found on a variety of industrial turbines, targeting systems, missiles and electro-optical devices.  
-总部位于佛罗里达州好莱坞的 Heico 为国防和航空航天行业的客户生产零件、电子元件以及控制和测试系统。该公司的产品可用于各种工业涡轮机、瞄准系统、导弹和光电设备。
+Hollywood, Fla.-based Heico produces parts, electronics and control and test systems for customers in the defense and aerospace industries. The company's products are found on a variety of industrial turbines, targeting systems, missiles and electro-optical devices.  
 
 
-Heico's earnings growth rebounded over the last three quarters, to a 31% gain for its Q3 report in August, after slowing to a 6% increase in Q4 of last year. The defense contractor averaged 43.5% revenue growth over that period, driven by strong demand for aftermarket parts within its Flight Support Group division. However, sales growth decelerated modestly to a 37% gain for its most recent report.  
-Heico 的盈利增长在过去三个季度反弹，在去年第四季度放缓至 6% 之后，8 月份的第三季度报告增长了 31%。在此期间，这家国防承包商的平均收入增长了 43.5%，这得益于其 Flight Support Group 部门对售后零件的强劲需求。然而，在其最近的报告中，销售额增长小幅放缓至 37%。
+Heico's earnings growth rebounded over the last three quarters, to a 31% gain for its Q3 report in August, after slowing to a 6% increase in Q4 of last year. The defense contractor averaged 43.5% revenue growth over that period, driven by strong demand for aftermarket parts within its Flight Support Group division. However, sales growth decelerated modestly to a 37% gain for its most recent report.  
 
 
-Still, Heico's roughly 36% gain in 2024 through the beginning of August was enough to pique the interest of investment oracle Buffett.  
-尽管如此，截至 8 月初，Heico 在 2024 年约 36% 的涨幅足以激起投资预言家巴菲特的兴趣。
+Still, Heico's roughly 36% gain in 2024 through the beginning of August was enough to pique the interest of investment oracle Buffett.  
 
 
-**Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)), [Warren Buffett's investment firm, bought shares of Heico](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/) and **Ulta Beauty** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) during the second quarter, according to the fund's regulatory filings tracked by [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc).  
-根据 [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc) 跟踪的该基金的监管文件，[沃伦·巴菲特的投资公司](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/)**伯克希尔·哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 在第二季度购买了 Heico 和 **Ulta Beauty** （[ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)） 的股票。
+**Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)), [Warren Buffett's investment firm, bought shares of Heico](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/) and **Ulta Beauty** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) during the second quarter, according to the fund's regulatory filings tracked by [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc).  
 
 
-Berkshire purchased 1.044 million shares of HEI in Q2 at around 165 per share, with a market value of over $185.37 million, whalewisdom data shows. Still, Heico only makes up 0.07% of Berkshire's portfolio. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) dominates as the top holding at 31%, even after Buffett halved his holdings during the quarter. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) and **Bank of America** ([BAC](https://research.investors.com/quote.aspx?symbol=BAC)) rank second and third, representing 12.9% and 11.9% of the portfolio, respectively.  
-whalewisdom 的数据显示，伯克希尔在第二季度以每股 165 股左右的价格购买了 104.4 万股 HEI，市值超过 1.8537 亿美元。尽管如此，Heico 仅占伯克希尔投资组合的 0.07%。**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 以 31% 的持股占据主导地位，即使在巴菲特在本季度将持股减半之后也是如此。**美国运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 和美国**银行** （[BAC](https://research.investors.com/quote.aspx?symbol=BAC)） 排名第二和第三，分别占投资组合的 12.9% 和 11.9%。
+Berkshire purchased 1.044 million shares of HEI in Q2 at around 165 per share, with a market value of over $185.37 million, whalewisdom data shows. Still, Heico only makes up 0.07% of Berkshire's portfolio. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) dominates as the top holding at 31%, even after Buffett halved his holdings during the quarter. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) and **Bank of America** ([BAC](https://research.investors.com/quote.aspx?symbol=BAC)) rank second and third, representing 12.9% and 11.9% of the portfolio, respectively.  
 
 
-For Heico's upcoming Q4 results, FactSet analysts expect earnings to increase 32% to 98 cents per share on 10.5% revenue growth to $1.03 billion, which would mark a quarterly record.  
-对于 Heico 即将到来的第四季度业绩，FactSet 分析师预计收益将增长 32% 至每股 98 美分，收入增长 10.5% 至 10.3 亿美元，这将创下季度纪录。
+For Heico's upcoming Q4 results, FactSet analysts expect earnings to increase 32% to 98 cents per share on 10.5% revenue growth to $1.03 billion, which would mark a quarterly record.  
 
 
-Heico Stock 海高股票
-----------------
+Heico Stock
+-----------
 
 
 
-Heico stock is trading below a 269.38 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a [flat base.](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) The buy point is the stock's record high from Sept. 23.  
-Heico 股票的交易价格低于 269.38 [的买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)[，价格平坦。](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/)买入点是该股自 9 月 23 日以来的历史高点。
+Heico stock is trading below a 269.38 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a [flat base.](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) The buy point is the stock's record high from Sept. 23.  
 
 
-Aggressive investors could also use Monday's high of 264.88 as an early [trendline entry.](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/) A move above this level would snap a short downtrend.  
-激进的投资者也可以利用周一的高点 264.88 作为[早期趋势线入场点。](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/)突破该水平将结束短暂的下跌趋势。
+Aggressive investors could also use Monday's high of 264.88 as an early [trendline entry.](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/) A move above this level would snap a short downtrend.  
 
 
-HEI shares eased 1.3% Tuesday, after they rebounded above their [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) on Friday.  
-HEI 股价周二下跌 1.3%，此前周五反弹至 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)上方。
+HEI shares eased 1.3% Tuesday, after they rebounded above their [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) on Friday.  
 
 
-Heico stock has soared more than 45% so far this year.  
-Heico 的股票今年迄今已飙升超过 45%。
+Heico stock has soared more than 45% so far this year.  
 
 
-Heico leads the Aerospace/Defense Group according to the [IBD Stock Checkup](http://research.investors.com/stock-checkup/). Shares have a near-perfect 98 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) out of a best-possible 99. The Composite Rating combines various technical indicators into one easy-to-read score.  
-Heico 根据 [IBD Stock Checkup](http://research.investors.com/stock-checkup/) 领导航空航天/国防集团。股票的综合[评级](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)近乎完美的 98 分（最高 99 分）。综合评级将各种技术指标组合成一个易于阅读的分数。
+Heico leads the Aerospace/Defense Group according to the [IBD Stock Checkup](http://research.investors.com/stock-checkup/). Shares have a near-perfect 98 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) out of a best-possible 99. The Composite Rating combines various technical indicators into one easy-to-read score.  
 
 
-HEI stock has a muscular 91 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/) based on its earnings growth streak. Heico's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) has fallen from late-September highs, but the stock still has a solid 83 [RS Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/).  
-HEI 股票的每[股收益](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)评级为 91 美元，具体取决于其连续盈利增长。Heico 的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)已从 9 月下旬的高点回落，但该股仍有稳定的 83 [RS 评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)。
+HEI stock has a muscular 91 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/) based on its earnings growth streak. Heico's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) has fallen from late-September highs, but the stock still has a solid 83 [RS Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/).  
 
 
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
-您可以在 X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison) 上关注 Harrison Miller 以获取更多股票新闻和更新*
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
-最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/) 
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
-寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/) 
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
-加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
 
