--- a/_columns/Swing_Trading/zh-cn/2024-10-18.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-18.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  SharkNinja Stock: A Swing Trade Worth Holding	SharkNinja 股票：值得持有的波段交易
+  SharkNinja Stock: A Swing Trade Worth Holding
 date: 2024-10-18 16:44 -0700
 image: /assets/img/swing-trading/2024-10-18.jpg
 author: JUSTIN NIELSEN
@@ -11,8 +11,7 @@ author: JUSTIN NIELSEN
 
 
 
-Normally with swing trading we measure our holding time in days or weeks. But in some instances, the holding time can extend to months. That was the case for a recent swing trade in SharkNinja. What decides how long you hold? Often it's a combination of the stock and the market environment.  
-通常，在波段交易中，我们以天或周为单位来衡量我们的持有时间。但在某些情况下，持有时间可能会延长至数月。SharkNinja 最近的波段交易就是这种情况。什么决定你持有多长时间？通常是股票和市场环境的结合。
+Normally with swing trading we measure our holding time in days or weeks. But in some instances, the holding time can extend to months. That was the case for a recent swing trade in SharkNinja. What decides how long you hold? Often it's a combination of the stock and the market environment.  
 
 
 
