--- a/_columns/Swing_Trading/zh-cn/2024-11-15.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-15.md
@@ -17,20 +17,17 @@ One of the hardest things to stomach as an investor is to see strong gains disap
 
 
 
-Swing Trading Example: IGV波段交易示例：IGV
-------------------------------------
+Swing Trading Example: IGV
+--------------------------
 
 
-Last week's column [discussed the unexpected signal of market strength](https://www.investors.com/research/swing-trading/why-we-ventured-back-into-sp-500-before-election-resolution/) that came on Election Day, before anything was decided. It wasn't just the indexes that looked strong. The **iShares Expanded Tech Software ETF** ([IGV](https://research.investors.com/quote.aspx?symbol=IGV)), also stood out as it bounced from its [21-day moving average line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **(1)** on election day.  
-上周的专栏讨论了在选举日出现的[市场走强的意外信号](https://www.investors.com/research/swing-trading/why-we-ventured-back-into-sp-500-before-election-resolution/)，当时还没有做出任何决定。看起来强劲的不仅仅是指数。**iShares Expanded Tech Software ETF** （[IGV](https://research.investors.com/quote.aspx?symbol=IGV)） 在选举日从 [21 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **（1）** 反弹，也脱颖而出。
+Last week's column [discussed the unexpected signal of market strength](https://www.investors.com/research/swing-trading/why-we-ventured-back-into-sp-500-before-election-resolution/) that came on Election Day, before anything was decided. It wasn't just the indexes that looked strong. The **iShares Expanded Tech Software ETF** ([IGV](https://research.investors.com/quote.aspx?symbol=IGV)), also stood out as it bounced from its [21-day moving average line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **(1)** on election day.  
 
 
-An attractive quality was the relative strength line hitting highs before the price on the software ETF. Plus, having cleared the long-term resistance around 90 from 2021, we were looking at few barriers to detract from the price. But we decided to wait until the election results came in to act. If the reaction was positive, we planned to ramp up exposure quickly. If it was choppy or down, we had enough of a cash position offering protection and the ability to reduce our holdings if necessary.  
-一个有吸引力的品质是相对强弱线在软件 ETF 的价格之前触及高点。此外，在清除了 90 年在 2021 附近的长期阻力位后，我们正在寻找一些障碍来降低价格。但我们决定等到选举结果出来后再采取行动。如果反应是积极的，我们计划迅速增加曝光。如果市场波动或下跌，我们有足够的现金头寸来提供保护，并在必要时减少我们的持有量。
+An attractive quality was the relative strength line hitting highs before the price on the software ETF. Plus, having cleared the long-term resistance around 90 from 2021, we were looking at few barriers to detract from the price. But we decided to wait until the election results came in to act. If the reaction was positive, we planned to ramp up exposure quickly. If it was choppy or down, we had enough of a cash position offering protection and the ability to reduce our holdings if necessary.  
 
 
-With the election results decisive and a strong market reaction, we looked to ETFs to start ramping up exposure quickly. We started a three-fourths position in IGV on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as it gapped up and then added another quarter a little later in the day **(2)**.  
-由于选举结果具有决定性意义和强烈的市场反应，我们期待 ETF 迅速开始增加敞口。我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) 的 IGV 中开始了四分之三的位置，因为它跳空上升，然后在当天晚些时候又增加了四分之一 **（2）。**
+With the election results decisive and a strong market reaction, we looked to ETFs to start ramping up exposure quickly. We started a three-fourths position in IGV on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as it gapped up and then added another quarter a little later in the day **(2)**.  
 
 
 
@@ -38,8 +35,7 @@ With the election results decisive and a strong market reaction, we looked to ET
 ---
 
 
-[**After Strong Postelection Rally, Is There Reason To Approach With Caution?  
-在选后强劲反弹之后，是否有理由谨慎对待？**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+[**After Strong Postelection Rally, Is There Reason To Approach With Caution?**](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
 
 
 
@@ -47,55 +43,44 @@ With the election results decisive and a strong market reaction, we looked to ET
 ---
 
 
-The market just got stronger and IGV ramped up quickly, hitting a 5% profit goal within a couple of days.  
-市场变得更强大，IGV 迅速崛起，在几天内达到了 5% 的利润目标。
+The market just got stronger and IGV ramped up quickly, hitting a 5% profit goal within a couple of days.  
 
 
-The Benefits Of Selling Into StrengthSelling into Strength 的好处
---------------------------------------------------------------
+The Benefits Of Selling Into Strength
+-------------------------------------
 
 
-After six consecutive days of gains, we decided to start scaling back on our position starting with a quarter trim **(3)**. One of the hardest parts of selling into strength is watching the position go up even more after you sell. And that's what IGV did the next day as it gapped up **(4)**.  
-在连续六天上涨后，我们决定从四分之一削减 **（3）** 开始缩减我们的头寸。强势卖出最困难的部分之一是看着头寸在你卖出后进一步上升。这就是 IGV 第二天跳空扩大时所做的 **（4）。**
+After six consecutive days of gains, we decided to start scaling back on our position starting with a quarter trim **(3)**. One of the hardest parts of selling into strength is watching the position go up even more after you sell. And that's what IGV did the next day as it gapped up **(4)**.  
 
 
-But remember the goal isn't to sell at the top. The goal is to make as much money as you can and even more importantly keep it. Selling into strength helps a great deal with the keeping it part. But there's no free lunch. You have to be willing to sacrifice some gains in order to keep the profit you have.  
-但请记住，目标不是在顶部销售。目标是尽可能多地赚钱，更重要的是保留它。以实力出售对保持它部分有很大帮助。但是天下没有免费的午餐。你必须愿意牺牲一些收益，才能保持你所拥有的利润。
+But remember the goal isn't to sell at the top. The goal is to make as much money as you can and even more importantly keep it. Selling into strength helps a great deal with the keeping it part. But there's no free lunch. You have to be willing to sacrifice some gains in order to keep the profit you have.  
 
 
-Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
-最终，IGV 在跳空后收盘不佳，我们借此机会再次缩小了四分之一的位置。当 IGV 在第二天 **（5）** 下跌更多时，我们删除了剩余的位置。我们早期的卖出价格较高，并且正在上涨，这使得 IGV 的回撤非常轻微。
+Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
 
 
-As much as the first sell might have hurt as IGV gapped up, it looked much better as IGV continued to fall on Friday **(6)**. As a swing trading rule, selling into strength is critical for keeping more of what you earn.  
-尽管 IGV 跳空上升，第一次卖出可能会受到伤害，但随着 IGV 在周五继续下跌 **（6），**情况看起来要好得多。作为波段交易规则，强势卖出对于保持您赚取的更多收入至关重要。
+As much as the first sell might have hurt as IGV gapped up, it looked much better as IGV continued to fall on Friday **(6)**. As a swing trading rule, selling into strength is critical for keeping more of what you earn.  
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
 
 
-[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
-Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
+[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment) 
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns  
-如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops  
-弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations) 
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
 
 
 
